# SceneLex

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  playwright-cli-dev.skill  todo.md
backend/: .env  package-lock.json  package.json  tsconfig.json
backend/data/: import-cet6.sql  import-tem4.sql  import-tem8.sql
backend/scripts/: build-dictionary-cache.js  create-access-key.js  download-ecdict.js  generate-cet6-sql.js  import-cet6-from-json.js  import-cet6-word-book.js  import-dictionary-cache.js  manage-user-access.js  prewarm-system-word-cards.ts  start-prod.sh
backend/src/: app.ts  server.ts
backend/src/config/: ai.ts  database.ts  env.ts
backend/src/controllers/: admin.controller.ts  auth.controller.ts  history.controller.ts  ocr.controller.ts  reading-assistant.controller.ts  reading.controller.ts  review.controller.ts  settings.controller.ts  system-word-book.controller.ts  word-book.controller.ts  word.controller.ts
backups/: scenelex_20260507_213455.dump
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: _worker.js
frontend/src/: App.vue  main.ts  style.css
functions/api/: [[path]].ts  health.ts
ocr-service/: README.md  main.py  pyproject.toml
scripts/: build-pages-worker.mjs  create-access-key.sh  start-tunnel.sh  user-renew.sh  user-resume.sh  user-suspend.sh
worker/src/: auth-routes.js  auth.js  db.js  decrypt.js  generate.js  history.js  index.js  ocr.js  reading.js  settings.js  system-word-books.js  word-books.js  word-study.js  word-utils.js
(+115 files in other folders)
