[project]
name = "scenelex-ocr-service"
version = "0.1.0"
description = "Local PaddleOCR HTTP service for SceneLex"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
    "paddlepaddle==3.2.0",
    "paddleocr[all]>=3.0.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[tool.uv.sources]
paddlepaddle = { index = "paddle-cpu" }
